# test-task

./: .env.example  .flake8  Dockerfile  LICENSE  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  task4.sql
app/application/common/: use_case.py
app/bootstrap/: di.py
app/domain/entities/: base.py  github.py
app/domain/exceptions/: base.py
app/domain/value_objects/: base.py
app/infrastructure/cache/: base.py  config.py  init.py
app/infrastructure/database/: base.py  config.py  custom_types.py  factory.py  init.py  models.py  utils.py
app/infrastructure/database/clickhouse/: clickhouse.py  factory.py  sqls.py
app/infrastructure/database/clickhouse/github/: sqls.py
app/infrastructure/database/clickhouse/views_metrics/: sql.py
app/infrastructure/database/postgres/: init.py
app/infrastructure/email/: config.py  smtp_client.py
app/infrastructure/exceptions/: base.py  database.py  jwt_token.py  message_broker.py  repository.py
app/infrastructure/jwt/: access_token.py  base.py  config.py  factory.py  jwt_processor.py
app/infrastructure/logger/: base.py  factory.py  logger.py
app/infrastructure/message_broker/: base.py  config.py  converters.py  message.py  message_broker_factory.py  rabbit_message_broker.py
app/infrastructure/message_broker/producer/: base.py
app/infrastructure/repositories/: base.py
app/infrastructure/repositories/github/: base.py
app/infrastructure/repositories/github/api/: constatns.py  converters.py  scrapper.py
app/infrastructure/repositories/github/database/: base.py  clickhouse.py  converters.py  sqls.py
app/presentation/api/: lifespan.py  main.py  middleware.py  router.py
app/presentation/api/database/: router.py
app/presentation/api/github/: router.py  schemas.py
app/presentation/api/healthcheck/: router.py  schemas.py
app/settings/: config.py
app/tools/: iterators.py  run_in_processpool.py  run_in_threadpool.py  time_utils.py
docker_compose/: app.yaml  cache.yaml  database.yaml  message_broker.yaml
migrations/: env.py
migrations/versions/: e272c042658f_first_migration.py
tests/: conftest.py  fixtures.py
tests/infrastructure/database/: test_postgres.py
tests/infrastructure/repository/github/api/: test_github_crapper.py
tests/infrastructure/repository/github/database/: test_github_database.py
tests/integrations/github/: test_github_scrapper_and_database.py
tests/unit/infrastructure/repository/github/api/: test_github_crapper.py
tests/unit/infrastructure/repository/github/database/: test_github_database.py
