[project]
name = "fastapi-ddd-boilerplate"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiochclient>=2.6.0",
    "aiohttp>=3.11.11",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "orjson>=3.10.15",
    "psycopg2>=2.9.10",
    "punq>=0.7.0",
    "pydantic-settings>=2.7.1",
    "python-multipart>=0.0.20",
    "setuptools>=75.8.0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.0",
]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi=["fastapi","starlette"]
known_first_party=["settings", "bootstrap", "presentation", "application", "infrastructure", "domain", "tests"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "faker>=33.3.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
